# AED_SuffixTree

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: SuffixTree.h  TreeVisualizer.h
src/: InternalStruct.cpp  SuffixTreePrivate.cpp  SuffixTreePublic.cpp  TreeVisualizer.cpp
